fixed odds header alignment, fixed active tab not removed from odds issue

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -109,6 +109,12 @@ through JS and the alt bg color gray is displayed insted */
     font-size: 20px;
   }
 
+  .oddsFix2 { /* fixes odds header issue after merge */
+    
+  position:relative;
+  top:-90px;
+    /* margin-bottom: 300px; */
+  }
 
   #search {
     width: 20%;
